--- a/08.验证集群功能.md
+++ b/08.验证集群功能.md
@@ -84,8 +84,74 @@ nginx-ds-cr9n2   1/1     Running   0          2m7s   172.30.32.2    zhangjun-k8s
 nginx-ds-nf7sk   1/1     Running   0          2m7s   172.30.184.2   zhangjun-k8s03   <none>           <none>
 nginx-ds-scpcn   1/1     Running   0          2m7s   172.30.80.2    zhangjun-k8s01   <none>           <none>
 ```
+##按照上述指令，pod一直是ContainerCreating状态，检查发现是在镜像下载的时候出现问题了，分别在3个主机中手动下载pause-amd64:3.1镜像后并打tag后重新使用create pod成功
 
 可见，nginx-ds 的 Pod IP 分别是 `172.30.32.2`、`172.30.184.2`、`172.30.80.2`，在所有 Node 上分别 ping 这三个 IP，看是否连通：
+``` bash
+[root@master work]# kubectl get pods  -o wide|grep nginx-ds
+nginx-ds-jxdgg   0/1     ContainerCreating   0          10h   <none>   node1    <none>           <none>
+nginx-ds-mzwf4   0/1     ContainerCreating   0          10h   <none>   node2    <none>           <none>
+nginx-ds-wj52n   0/1     ContainerCreating   0          10h   <none>   master   <none>           <none>
+[root@master work]# kubectl describe pod nginx-ds-jxdgg 
+Name:               nginx-ds-jxdgg
+Namespace:          default
+Priority:           0
+PriorityClassName:  <none>
+Node:               node1/192.168.63.121
+Start Time:         Fri, 23 Aug 2019 05:49:13 +0800
+Labels:             app=nginx-ds
+                    controller-revision-hash=5db4f65859
+                    pod-template-generation=1
+Annotations:        <none>
+Status:             Pending
+IP:                 
+Controlled By:      DaemonSet/nginx-ds
+Containers:
+  my-nginx:
+    Container ID:   
+    Image:          nginx:1.7.9
+    Image ID:       
+    Port:           80/TCP
+    Host Port:      0/TCP
+    State:          Waiting
+      Reason:       ContainerCreating
+    Ready:          False
+    Restart Count:  0
+    Environment:    <none>
+    Mounts:
+      /var/run/secrets/kubernetes.io/serviceaccount from default-token-86l64 (ro)
+Conditions:
+  Type              Status
+  Initialized       True 
+  Ready             False 
+  ContainersReady   False 
+  PodScheduled      True 
+Volumes:
+  default-token-86l64:
+    Type:        Secret (a volume populated by a Secret)
+    SecretName:  default-token-86l64
+    Optional:    false
+QoS Class:       BestEffort
+Node-Selectors:  <none>
+Tolerations:     node.kubernetes.io/disk-pressure:NoSchedule
+                 node.kubernetes.io/memory-pressure:NoSchedule
+                 node.kubernetes.io/not-ready:NoExecute
+                 node.kubernetes.io/pid-pressure:NoSchedule
+                 node.kubernetes.io/unreachable:NoExecute
+                 node.kubernetes.io/unschedulable:NoSchedule
+Events:
+  Type     Reason                  Age                   From               Message
+  ----     ------                  ----                  ----               -------
+  Normal   Scheduled               10h                   default-scheduler  Successfully assigned default/nginx-ds-jxdgg to node1
+  Warning  FailedCreatePodSandBox  6h50m                 kubelet, node1     Failed create pod sandbox: rpc error: code = Unknown desc = failed pulling image "registry.cn-beijing.aliyuncs.com/k8s_images/pause-amd64:3.1": Error response from daemon: Get https://registry.cn-beijing.aliyuncs.com/v2/k8s_images/pause-amd64/manifests/3.1: Get https://dockerauth.cn-hangzhou.aliyuncs.com/auth?scope=repository%3Ak8s_images%2Fpause-amd64%3Apull&service=registry.aliyuncs.com%3Acn-beijing%3A26842: net/http: request canceled (Client.Timeout exceeded while awaiting headers)
+  Warning  FailedCreatePodSandBox  145m (x19 over 9h)    kubelet, node1     Failed create pod sandbox: rpc error: code = Unknown desc = failed pulling image "registry.cn-beijing.aliyuncs.com/k8s_images/pause-amd64:3.1": Error response from daemon: Get https://registry.cn-beijing.aliyuncs.com/v2/k8s_images/pause-amd64/manifests/3.1: Get https://dockerauth.cn-hangzhou.aliyuncs.com/auth?scope=repository%3Ak8s_images%2Fpause-amd64%3Apull&service=registry.aliyuncs.com%3Acn-beijing%3A26842: net/http: TLS handshake timeout
+  Warning  FailedCreatePodSandBox  10m                   kubelet, node1     Failed create pod sandbox: rpc error: code = Unknown desc = failed pulling image "registry.cn-beijing.aliyuncs.com/k8s_images/pause-amd64:3.1": Error response from daemon: Get https://registry.cn-beijing.aliyuncs.com/v2/: net/http: request canceled (Client.Timeout exceeded while awaiting headers)
+  Warning  FailedCreatePodSandBox  48s (x1944 over 10h)  kubelet, node1     Failed create pod sandbox: rpc error: code = Unknown desc = failed pulling image "registry.cn-beijing.aliyuncs.com/k8s_images/pause-amd64:3.1": Error response from daemon: pull access denied for registry.cn-beijing.aliyuncs.com/k8s_images/pause-amd64, repository does not exist or may require 'docker login'
+``` 
+``` bash
+docker pull registry.cn-beijing.aliyuncs.com/zhoujun/pause-amd64:3.1
+docker tag registry.cn-beijing.aliyuncs.com/zhoujun/pause-amd64:3.1 registry.cn-beijing.aliyuncs.com/k8s_images/pause-amd64:3.1
+```
 
 ``` bash
 source /opt/k8s/bin/environment.sh
